2000-10-06 09:50 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/rdd/dbcmd.c
     * added #include "rddcpy.c" to the end of file.
   + source/rdd/rddcpy.c
     + implementation of APPEND FROM and COPY TO by Harrier

2000-10-06 23:00 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
+doc\es\binnum.txt
 doc\es\browse.txt
 doc\es\command.txt
 doc\es\compiler.txt
 doc\es\datetime.txt
 doc\es\array.txt
 doc\es\diskspac.txt
 doc\es\error.txt
 doc\es\eval.txt
 doc\es\garbage.txt
 doc\es\lang.txt
 doc\es\memo.txt
 doc\es\dir.txt
 doc\es\hb_set.txt
    *Spanish translations of the docs provided by Alejandro de Garate and Edison Suarez

2000-10-05 16:00 UTC-0400 David G. Holm <dholm@jsd-llc.com>
   * source/compiler/cmdcheck.c
     ! Corrected new bug in my earlier "fix" of handling the -g option
       (I left in the 'break', but should have left in the 'continue').

2000-10-05 15:00 UTC-0400 David G. Holm <dholm@jsd-llc.com>
   * source/compiler/cmdcheck.c
     ! Corrected handling of 'g' option when option lead-in is '-'.

2000-10-03 231:45 UTC+0100 JFL <jfl@mafact.com>
   * source/compiler/hbpcode.c
     * uprated kolpas limit counter from 3 to 20
       to allow more neested #command to be matched
   * include/hbclass.ch
     * Added two compatibility #define allowing somebody to
       disable either the autoInherit of tObject (HB_CLS_NOTOBJECT)
       or to not auto initiate logical and Numerical var by default
       (HB_CLS_NOAUTOINIT)
   * source/rtl/tclass.prg
     * Added optional param to addmultidata and aadmulticlsdata
       to control the autoinit (see previous addons)
   * source/vm/classes.c
     * Scoping error when scoped var where used from inline


2000-10-02 13:00 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/hbpcode.c
     * Corrected 1 compiler warning.

   * source/pp/ppcomp.c
     * Cleaned-up and corrected bug when rules files had an #include directive.
     + Added CloseInclude() and moved relevant logic into it.
